fixed flex box alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,15 @@ padding: 20px;}
 flex: 80%;
 padding: 20px;
 }
+
+.caption {
+  position: absolute;
+   }
+
+.card {
+  align-items: flex-end;
+  justify-content: flex-end;
+}  
 .flex-container1 {
   position: flex;
   padding: 20px;
@@ -116,6 +125,7 @@ padding: 20px;
   display: flex;
   flex-wrap: wrap;
 }
+
 
 .section {
   flex-wrap: wrap;
